--- a/build.gradle
+++ b/build.gradle
@@ -15,4 +15,9 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
     compile 'org.apache.httpcomponents:httpclient:4.5.10'
+    compile group: 'javax.validation', name: 'validation-api', version: '2.0.0.Final'
+    compile group: 'org.hibernate', name: 'hibernate-validator', version: '6.1.0.Final'
+    compile group: 'org.hibernate', name: 'hibernate-validator-annotation-processor', version: '6.1.0.Final'
+    compile group: 'javax.el', name: 'javax.el-api', version: '3.0.0'
+    compile group: 'org.glassfish.web', name: 'javax.el', version: '2.2.6'
 }
